COMMERCE-8016 geolocation card's height fix

--- a/modules/apps/commerce/commerce-warehouse-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/commerce/commerce-warehouse-web/src/main/resources/META-INF/resources/css/main.scss
@@ -7,3 +7,10 @@
 		fill: #f00;
 	}
 }
+
+.card-full-height {
+	max-height: -moz-available;
+	max-height: -webkit-fill-available;
+	max-height: fill-available;
+	max-height: -webkit-fill-available;
+}
